# not GPL, thus no COPYING file
AUTOMAKE_OPTIONS=foreign

EXTRA_DIST= LICENSE.txt README.md

# Temporary for work on https://github.com/johnkerl/miller/issues/9:
# In Travis build:
# $ a2x -d manpage -f manpage miller.1.txt
# a2x: ERROR: "xmllint" --nonet --noout --valid "/path/to/pub_http_internet/miller/doc/miller.1.xml" returned non-zero exit status 4

# SUBDIRS=c doc
SUBDIRS=c
