AC_PREREQ([2.60])
AC_INIT([mlr],[2.0.0],[email@address.missing])
AC_CONFIG_SRCDIR([c/mlrmain.c])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE

AC_CANONICAL_HOST
AC_PROG_CC
AM_PROG_LEX
AM_PROG_CC_C_O
AC_EXEEXT
LT_INIT

AC_CONFIG_FILES([Makefile
		c/cli/Makefile
		c/containers/Makefile
		c/dsls/Makefile
		c/input/Makefile
		c/lib/Makefile
		c/mapping/Makefile
		c/output/Makefile
		c/stream/Makefile
		c/Makefile])
AC_OUTPUT
