AC_PREREQ([2.60])
AC_INIT([mlr],[2.1.1],[email@address.missing])
AC_CONFIG_SRCDIR([c/mlrmain.c])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_AUX_DIR([autotools])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE

AC_CANONICAL_HOST
AC_PROG_CC
AM_PROG_AR
AM_PROG_LEX
AC_EXEEXT
LT_INIT

AC_CONFIG_FILES([Makefile
		c/cli/Makefile
		c/containers/Makefile
		c/dsls/Makefile
		c/input/Makefile
		c/lib/Makefile
		c/mapping/Makefile
		c/output/Makefile
		c/stream/Makefile
		c/Makefile])
AC_OUTPUT
