noinst_LTLIBRARIES=	libcontainers.la
libcontainers_la_SOURCES=	\
			dheap.c \
			dheap.h \
			dvector.c \
			dvector.h \
			free_flags.h \
			header_keeper.c \
			header_keeper.h \
			hss.c \
			hss.h \
			join_bucket_keeper.c \
			join_bucket_keeper.h \
			lhms2v.c \
			lhms2v.h \
			lhmsi.c \
			lhmsi.h \
			lhmslv.c \
			lhmslv.h \
			lhmss.c \
			lhmss.h \
			lhmsv.c \
			lhmsv.h \
			lrec.c \
			lrec.h \
			mixutil.c \
			mixutil.h \
			mlhmmv.c \
			mlhmmv.h \
			mlr_dsl_ast.c \
			mlr_dsl_ast.h \
			mlrval.c \
			mlrval.h \
			parse_trie.c \
			parse_trie.h \
			percentile_keeper.c \
			percentile_keeper.h \
			rslls.c \
			rslls.h \
			slls.c \
			slls.h \
			sllv.c \
			sllv.h \
			top_keeper.c \
			top_keeper.h
libcontainers_la_LIBADD=	\
			../lib/libmlr.la \
			../mapping/libmapping.la

AM_CPPFLAGS=	-I${srcdir}/../
AM_CFLAGS=	-std=gnu99
