noinst_LTLIBRARIES=	libcontainers.la
libcontainers_la_SOURCES=	\
			boxed_xval.h \
			dheap.c \
			dheap.h \
			dvector.c \
			dvector.h \
			header_keeper.c \
			header_keeper.h \
			hss.c \
			hss.h \
			join_bucket_keeper.c \
			join_bucket_keeper.h \
			lhms2v.c \
			lhms2v.h \
			lhmsi.c \
			lhmsi.h \
			lhmsll.c \
			lhmsll.h \
			lhmslv.c \
			lhmslv.h \
			lhmsmv.c \
			lhmsmv.h \
			lhmss.c \
			lhmss.h \
			lhmsv.c \
			lhmsv.h \
			local_stack.c \
			local_stack.h \
			loop_stack.c \
			loop_stack.h \
			lrec.c \
			lrec.h \
			mixutil.c \
			mixutil.h \
			mlhmmv.c \
			mlhmmv.h \
			parse_trie.c \
			parse_trie.h \
			percentile_keeper.c \
			percentile_keeper.h \
			rslls.c \
			rslls.h \
			sllmv.c \
			sllmv.h \
			slls.c \
			slls.h \
			sllv.c \
			sllv.h \
			top_keeper.c \
			top_keeper.h \
			type_decl.c \
			type_decl.h \
			xvfuncs.c \
			xvfuncs.h

libcontainers_la_LIBADD=	\
			../lib/libmlr.la \
			../mapping/libmapping.la

AM_CPPFLAGS=	-I${srcdir}/../
AM_CFLAGS=	-std=gnu99
