noinst_LTLIBRARIES=	libmlr.la
libmlr_la_SOURCES=	minunit.h \
			mlr_globals.c \
			mlr_globals.h \
			mlrmath.c \
			mlrmath.h \
			mlrstat.c \
			mlrstat.h \
			mlrregex.c \
			mlrregex.h \
			mlrutil.c \
			mlrutil.h \
			context.c \
			context.h \
			mtrand.c \
			mtrand.h \
			string_array.c \
			string_array.h \
			string_builder.c \
			string_builder.h \
			mlr_test_util.c \
			mlr_test_util.h

AM_CPPFLAGS=	-I${srcdir}/../
AM_CFLAGS=	-std=gnu99
