SUBDIRS=	rfc-csv
EXTRA_DIST=	\
		a.csv \
		a.pprint \
		abixy \
		abixy-het \
		abixy-wide \
		abixy-wide-short \
		b.csv \
		b.pprint \
		c.csv \
		c.pprint \
		d.csv \
		d.pprint \
		date1.csv \
		date2.csv \
		dots.pprint \
		dots.xtab \
		double-ps.dkvp \
		e.csv \
		e.pprint \
		f.csv \
		f.pprint \
		fsec2xhms \
		g.csv \
		g.pprint \
		gmt2sec \
		gsub.dat \
		having-fields-regex.dkvp \
		het.csv \
		het.dkvp \
		het-join-left \
		het-join-right-r0 \
		het-join-right-r1 \
		het-join-right-r2 \
		het-join-right-r3 \
		het-join-right-r4 \
		het-join-right-r5 \
		het-join-right-r6 \
		het-join-right-r11 \
		het-join-right-r12 \
		het-join-right-r13 \
		het-join-right-r14 \
		het-join-right-r15 \
		het-join-right-r16 \
		het-join-right-r22 \
		het-join-right-r23 \
		het-join-right-r24 \
		het-join-right-r25 \
		het-join-right-r26 \
		het-join-right-r33 \
		het-join-right-r34 \
		het-join-right-r35 \
		het-join-right-r36 \
		het-join-right-r44 \
		het-join-right-r45 \
		het-join-right-r46 \
		het-join-right-r55 \
		het-join-right-r56 \
		het-join-right-r66 \
		int64io.dkvp \
		int64arith.dkvp \
		int-float.dkvp \
		join-het.dkvp \
		joina.dkvp \
		joinb.dkvp \
		logi.dkvp \
		minmax.dkvp \
		missings.dkvp \
		mixed-types.xtab \
		modarith.dat \
		multi-ips.dkvp \
		multi-sep.csv \
		multi-sep.dkvp \
		null-fields.csv \
		null-fields.nidx \
		null-vs-empty.dkvp \
		ofmt.dat \
		regex.dkvp \
		regularize.dkvp \
		rfc-csv \
		scinot.dkvp \
		scinot1.dkvp \
		sec2gmt \
		sec2xhms \
		short \
		small \
		sort-het.dkvp \
		space-pad.dkvp \
		space-pad.nidx \
		space-pad.pprint \
		sub.dat \
		truncated.csv \
		truncated.dkvp \
		truncated.nidx \
		truncated.pprint \
		truncated.xtab \
		truncated.xtab-crlf \
		utf8-1.csv \
		utf8-2.csv \
		utf8-align.dkvp \
		utf8-align.nidx
